@@ -164,6 +164,14 @@ Delay job for this many seconds (from now).
 Job is valid for this many seconds (from now) before it expires. Note that this
 option is B<EXPERIMENTAL> and might change without warning!
 
+=item lax
+
+  lax => 1
+
+Existing jobs this job depends on may also have transitioned to the C<failed>
+state to allow for it to be processed, defaults to C<false>. Note that this
+option is B<EXPERIMENTAL> and might change without warning!
+
 =item notes
 
   notes => {foo => 'bar', baz => [1, 2, 3]}
@@ -333,6 +341,13 @@ Epoch time job was finished.
   id => 10025
 
 Job id.
+
+=item lax
+
+  lax => 0
+
+Existing jobs this job depends on may also have failed to allow for it to be
+processed.
 
 =item notes
 
@@ -654,6 +669,14 @@ Delay job for this many seconds (from now).
   expire => 300
 
 Job is valid for this many seconds (from now) before it expires. Note that this
+option is B<EXPERIMENTAL> and might change without warning!
+
+=item lax
+
+  lax => 1
+
+Existing jobs this job depends on may also have transitioned to the C<failed>
+state to allow for it to be processed, defaults to C<false>. Note that this
 option is B<EXPERIMENTAL> and might change without warning!
 
 =item parents
