@@ -3,6 +3,8 @@
   - Removed experimental support for job sequences, and next and previous fields from list_jobs method.
   - Added EXPERIMENTAL expire option to enqueue method and expires field to list_jobs method to
     support expiring jobs.
+  - Added EXPERIMENTAL lax option to enqueue method and lax field to list_jobs method to support
+    lax dependencies.
   - Fixed a bug where manual retries would count towards the attempts limit for automatic retries.
 
 v5.0.2    2020-07-23 00:30:45 EDT
